@@ -51,6 +51,39 @@ namespace CIAO_Writer_Sender_Impl
   };
 
   /**
+   * ConnectorStatusListener_exec_i
+   */
+  class SENDER_EXEC_Export ConnectorStatusListener_exec_i
+    : public virtual ::CCM_DDS::CCM_ConnectorStatusListener,
+      public virtual ::CORBA::LocalObject
+  {
+  public:
+    ConnectorStatusListener_exec_i (Sender_exec_i &callback);
+    virtual ~ConnectorStatusListener_exec_i (void);
+
+    virtual
+    void on_inconsistent_topic (::DDS::Topic_ptr the_topic,
+                                const DDS::InconsistentTopicStatus & status);
+    virtual
+    void on_requested_incompatible_qos (::DDS::DataReader_ptr the_reader,
+                                        const DDS::RequestedIncompatibleQosStatus & status);
+    virtual
+    void on_sample_rejected (::DDS::DataReader_ptr the_reader,
+                             const DDS::SampleRejectedStatus & status);
+    virtual
+      void on_offered_deadline_missed (::DDS::DataWriter_ptr the_writer,
+                                       const DDS::OfferedDeadlineMissedStatus & status);
+    virtual
+    void on_offered_incompatible_qos (::DDS::DataWriter_ptr the_writer,
+                                      const DDS::OfferedIncompatibleQosStatus & status);
+    virtual
+      void on_unexpected_status (::DDS::Entity_ptr the_entity,
+                                 ::DDS::StatusKind status_kind);
+  private:
+    Sender_exec_i &callback_;
+  };
+
+  /**
    * Pulse Generator
    */
   class pulse_Generator :
@@ -83,6 +116,8 @@ namespace CIAO_Writer_Sender_Impl
 
     //@{
     /** Component attributes and port operations. */
+    virtual ::CCM_DDS::CCM_ConnectorStatusListener_ptr
+    get_connector_status (void);
 
     virtual ::CORBA::UShort rate (void);
 
@@ -109,7 +144,7 @@ namespace CIAO_Writer_Sender_Impl
     //@{
     /** User defined public operations. */
     void tick (void);
-
+    void get_started (void);
     //@}
 
   private:
